# crm-memory-retrieval-research

./: .gitignore  CLAUDE.md  README.md  export_review_data_to_csv.py  main.py  pyproject.toml  pyrightconfig.json  run_batch.py
data/: README.md
data/phase0/: README.md
data/phase0/memories/: README.md
data/phase0/test_cases/: README.md
data/phase0_results/: README.md
data/raw/: README.md
data/review_data/: README.md
docs/: EXPERIMENT_PLAN.md  PHASE1_ANALYSIS.md  PROMPT_IMPROVEMENTS.md  retrieval_metrics_migration.md
docs/plans/: 2026-02-21-comprehensive-refactor-design.md  2026-02-21-comprehensive-refactor.md  2026-02-21-unit-tests-design.md  2026-02-21-unit-tests.md
notebooks/: phase1.ipynb  phase1_threshold_analysis.ipynb
notebooks/.ipynb_checkpoints/: phase1-checkpoint.ipynb  phase1_threshold_analysis-checkpoint.ipynb
notebooks/comparison/: cross_run_comparison.ipynb  rerank_strategy_comparison.ipynb  subrun_comparison.ipynb
notebooks/phase1/: phase1.ipynb  phase1_threshold_analysis.ipynb
notebooks/phase1/.ipynb_checkpoints/: phase1-checkpoint.ipynb
notebooks/phase2/: README.md  phase1_reranking_comparison.ipynb  phase2.ipynb
scripts/: export_review_data_to_csv.py  fetch_memories.py  phase0_build_test_cases.py  phase0_common.py  phase0_experiment.py  phase0_sqlite_fts.py  pre0_build_memories.py
scripts/common/: __init__.py  io.py  load_memories.py  openrouter.py  prompts.py  query_generation.py  runs.py  test_cases.py
scripts/phase0/: __init__.py  build_memories.py  db.py  experiment.py  fetch_memories.py  load_memories.py  memories.py  test_cases.py
scripts/phase1/: __init__.py  build_memories.py  db.py  experiment.py  load_memories.py  test_cases.py
scripts/phase2/: __init__.py  experiment.py  load_memories.py  reranker.py  test_cases.py
src/memory_retrieval/: constants.py  types.py
src/memory_retrieval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_comparison_migration.py  test_constants.py  test_experiments_metrics.py  test_experiments_test_cases.py  test_infra_prompts.py  test_infra_runs.py  test_memories_helpers.py  test_memories_loader.py  test_memories_validators.py  test_metrics_migration_adapter.py  test_query_generation.py  test_runner_helpers.py  test_search_base.py  test_search_db_utils.py  test_search_fts5.py  test_search_vector_sentence_transformer.py  test_types.py
(+33 files in other folders)
