[project]
name = "crm-memory-retrieval-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.0.0",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "ollama>=0.4.0",
    "requests>=2.32.5",
    "sqlite-vec>=0.1.6",
]
