[project]
name = "memory-retrieval"
version = "0.1.0"
description = "Memory retrieval research for code review knowledge"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.0.0",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "ollama>=0.4.0",
    "requests>=2.32.5",
    "sentence-transformers>=3.0.0",
    "sqlite-vec>=0.1.6",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
