[project]
name = "memory-retrieval"
version = "0.1.0"
description = "Memory retrieval research for code review knowledge"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "jupyter>=1.0.0",
  "matplotlib>=3.9.0",
  "numpy>=2.0.0",
  "ollama>=0.4.0",
  "requests>=2.32.5",
  "sentence-transformers>=3.0.0",
  "scipy>=1.14.0",
  "seaborn>=0.13.0",
  "sqlite-vec>=0.1.6",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort (import sorting)
  "UP",  # pyupgrade (modern Python syntax)
  "B",   # flake8-bugbear (common bugs)
  "SIM", # flake8-simplify
  "RUF", # Ruff-specific rules
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "E702",   # multiple statements on semicolon (common in notebooks)
  "RUF001", # ambiguous unicode characters (× in strings is intentional)
  "RUF003", # ambiguous unicode characters in comments
]

[tool.ruff.lint.isort]
known-first-party = ["memory_retrieval"]

[tool.ruff.lint.per-file-ignores]
"notebooks/**" = [
  "E402",
  "B905",
] # notebooks: flexible import order + zip without strict

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = ["ruff>=0.15.0"]
